feat: added upload picture by id
